# otp_gui

./: LICENSE  README.md  gui.py  pyproject.toml  requirements.txt
scripts/: run_in_venv.sh
