[tool.poetry]
name = "otp-gui"
version = "0.1.0"
description = "a GUI for the Rust otp_exchange package"
authors = ["NickyNocerino"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
otp_exchange = {git = "https://github.com/NickyNocerino/otp_gui.git"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
