[tool.poetry]
name = "otp-gui"
version = "0.1.0"
description = "a GUI for the Rust otp_exchange package"
authors = ["NickyNocerino"]
license = "MIT"
readme = "README.md"
packages = [
    { include = "otp_gui" },
]

[tool.poetry.dependencies]
python = "^3.11"
otp_exchange = {git = "git@github.com:NickyNocerino/otp-exchange.git", branch= "main"}


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
